@@ -1,3 +1,8 @@
+Tue Mar 23 12:02:00 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htsearch/Display.cc(generateStars): Add in support for use_star_image
+	which was lost when template support was put in way back when.
+
 Tue Mar 23 11:47:52 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* Makefile.in: add missing ';' in for loops, between fi & done
